# Trabajo_CV_2

./: .gitignore  Dataset_Flores_Class.py  Flask_Deployment.py  LICENSE  Modelo.py  NetworkModel.py  README.md  Train_Model.py  Transform.py  Untitled1.ipynb  cnn-Copy1.ipynb  easy_run.sh  pyproject.toml  test.py  test_dataset.py  test_prediction_form_checkpoint_model.py  view model.py
lightning_logs/version_0/: events.out.tfevents.1656534414.DESKTOP-LP6BDNP.4812.0
lightning_logs/version_1/: events.out.tfevents.1656534489.DESKTOP-LP6BDNP.20112.0
lightning_logs/version_10/: events.out.tfevents.1656535412.DESKTOP-LP6BDNP.2136.0
lightning_logs/version_11/: events.out.tfevents.1656535453.DESKTOP-LP6BDNP.18704.0
lightning_logs/version_12/: events.out.tfevents.1656535734.DESKTOP-LP6BDNP.16080.0
lightning_logs/version_13/: events.out.tfevents.1656535800.DESKTOP-LP6BDNP.472.0
lightning_logs/version_14/: events.out.tfevents.1656536010.DESKTOP-LP6BDNP.19924.0
lightning_logs/version_15/: events.out.tfevents.1656536983.DESKTOP-LP6BDNP.128.0
lightning_logs/version_16/: events.out.tfevents.1656537685.DESKTOP-LP6BDNP.21164.0
lightning_logs/version_17/: events.out.tfevents.1656598418.DESKTOP-LP6BDNP.6292.0
lightning_logs/version_2/: events.out.tfevents.1656534788.DESKTOP-LP6BDNP.10784.0
lightning_logs/version_3/: events.out.tfevents.1656534925.DESKTOP-LP6BDNP.9408.0
lightning_logs/version_4/: events.out.tfevents.1656535072.DESKTOP-LP6BDNP.15500.0
lightning_logs/version_5/: events.out.tfevents.1656535132.DESKTOP-LP6BDNP.21392.0
(+13 files in other folders)
