[tool.poetry]
name = "trabajo_cv_2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
torch = "^1.12.0"
Pillow = "^9.2.0"
torchvision = "^0.13.0"
pandas = "^1.4.3"
gdown = "^4.5.1"
pytorch-lightning = "^1.6.4"
typer = "^0.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
